--- a/app/Resources/views/default/shop.html.twig
+++ b/app/Resources/views/default/shop.html.twig
@@ -44,7 +44,7 @@
     <div class="product">
         {{ product.name }}<br><br>
         Tu kiedyś będzie miniaturka produktu nr. {{ product.id }}<br><br>
-        Cena: {{ product.price }} PLN<br><br>
+        Cena: {{ product.price|number_format(2, '.', ',') }} PLN<br><br>
         <a href="{{ path('shopproductinfo', {'id': product.id}) }}" class="btn btn-default">Zobacz</a>
     </div>
 
