hotfix cyświetlania cen

--- a/app/Resources/views/default/showProductDetails/showProductDetails.html.twig
+++ b/app/Resources/views/default/showProductDetails/showProductDetails.html.twig
@@ -8,7 +8,7 @@
 
     <h2 class="page-header">{{ product.name }}</h2>
     <ul class="list-group">
-        <li class="list-group-item">Cena: {{ product.price }}</li>
+        <li class="list-group-item">Cena: {{ product.price|number_format(2, '.', ',') }}</li>
         <li class="list-group-item">Opis: {{ product.description }}</li>
         <li class="list-group-item">Kategoria: {{ product.subcategory.category.name }} </li>
         <li class="list-group-item">Podkategoria: {{ product.subcategory.name }}</li>
